--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
             </button>
 
             <a class="navbar-brand" href="#/">ph</a>
@@ -42,7 +43,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/register">Register</a></li>
               <li><a ng-href="#/login">Login</a></li>
-
+              <li><a ng-href="#/submit">Submit</a></li>
             </ul>
           </div>
         </div>
@@ -79,6 +80,9 @@
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/services/api_service.js"></script>
+        <script src="scripts/controllers/post.js"></script>
+
+        </script>
 
         </script>
         <!-- endbuild -->
