--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,9 @@
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/services/api_service.js"></script>
         <script src="scripts/controllers/post.js"></script>
+        <script src="scripts/controllers/postdetails.js"></script>
+
+        </script>
 
         </script>
 
