--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-base64/angular-base64.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -79,9 +80,10 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/services/api_service.js"></script>
         <script src="scripts/controllers/post.js"></script>
         <script src="scripts/controllers/postdetails.js"></script>
+        <script src="scripts/services/api_service.js"></script>
+        </script>
 
         </script>
 
