css and html changes

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,6 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
             </button>
 
             <a class="navbar-brand" href="#/">ph</a>
@@ -41,9 +40,9 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/register">Register</a></li>
-              <li><a ng-href="#/login">Login</a></li>
               <li><a ng-href="#/submit">Submit</a></li>
+              <li style="position: absolute ;right: 0px;"><a ng-href="#/login">LOGIN</a></li>
+
             </ul>
           </div>
         </div>
