--- a/app/index.html
+++ b/app/index.html
@@ -32,17 +32,14 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-
-            <a class="navbar-brand" href="#/">ph</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
+              <li class="active"><a href="#/">Tech</a></li>
               <li><a ng-href="#/submit">Submit</a></li>
               <li style="position: absolute ;right: 0px;"><a ng-href="#/login">LOGIN</a></li>
-
             </ul>
           </div>
         </div>
