app changes for html

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
               <li class="active"><a href="#/">Tech</a></li>
               <li><a ng-href="#/submit">Submit</a></li>
               <li style="position: absolute ;right: 0px;"><a ng-href="#/login">LOGIN</a></li>
+              <li style="padding: 10px; border: 1px solid black;"><a ng-href="#/profile">Profile</a></li>
             </ul>
           </div>
         </div>
