--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/post.js"></script>
         <script src="scripts/controllers/postdetails.js"></script>
+        <script src="scripts/controllers/profiledetails.js"></script>
         <script src="scripts/services/api_service.js"></script>
 
 </body>
