--- a/app/index.html
+++ b/app/index.html
@@ -35,12 +35,11 @@
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Tech</a></li>
+            <ul class="nav navbar-nav main-nav" >
+              <li><a href="#/">Tech</a></li>
               <li><a ng-href="#/submit">Submit</a></li>
-              <li style="position: absolute ;right: 0px;"><a ng-href="#/login">LOGIN</a></li>
-              <li style="padding: 10px; border: 1px solid black;"><a ng-href="#/profile">Profile</a></li>
+              <li><a ng-href="#/profile">Profile</a></li>
+              <li class="login"><a ng-href="#/login">Login</a></li>
             </ul>
           </div>
         </div>
