--- a/app/index.html
+++ b/app/index.html
@@ -22,27 +22,23 @@
 
     <!-- Add your site or application content here -->
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
+      <div class="navbar navbar-default main-navbar" role="navigation">
           <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
-            </button>
+            </button>-->
           </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+          <!--<div class="collapse navbar-collapse" id="js-navbar-collapse">-->
             <ul class="nav navbar-nav main-nav" >
-              <li><a href="#/">Tech</a></li>
-              <li><a ng-href="#/submit">Submit</a></li>
-              <li><a ng-href="#/profile">Profile</a></li>
+              <li><a class="text-black" href="#/">Tech</a></li>
+              <li><a class="text-black" ng-href="#/submit">Submit</a></li>
+              <li><a class="text-black" ng-href="#/profile">Profile</a></li>
             </ul>
-          </div>
-
-        </div>
+          <!--</div>-->
       </div>
     </div>
 
@@ -65,7 +61,6 @@
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <script src="bower_components/ngstorage/ngStorage.js"></script>
     <script src="bower_components/oauth-js/dist/oauth.min.js"></script>
-    <script src="bower_components/ngGallery/src/js/ngGallery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -79,6 +74,7 @@
         <script src="scripts/controllers/profiledetails.js"></script>
         <script src="scripts/services/api_service.js"></script>
         <script src="scripts/services/twitter_service.js"></script>
+        
 
 </body>
 </html>
