--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <script src="bower_components/ngstorage/ngStorage.js"></script>
     <script src="bower_components/oauth-js/dist/oauth.min.js"></script>
+    <script src="bower_components/ngGallery/src/js/ngGallery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -74,7 +75,7 @@
         <script src="scripts/controllers/profiledetails.js"></script>
         <script src="scripts/services/api_service.js"></script>
         <script src="scripts/services/twitter_service.js"></script>
-        
+
 
 </body>
 </html>
