--- a/app/index.html
+++ b/app/index.html
@@ -23,14 +23,14 @@
     <!-- Add your site or application content here -->
     <div class="header">
       <div class="navbar navbar-default main-navbar" role="navigation">
-          <div class="navbar-header">
-            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+          <!--<div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
-            </button>-->
-          </div>
+            </button>
+          </div>-->
 
           <!--<div class="collapse navbar-collapse" id="js-navbar-collapse">-->
             <ul class="nav navbar-nav main-nav" >
@@ -38,11 +38,14 @@
               <li><a class="text-black" ng-href="#/submit">Submit</a></li>
               <li><a class="text-black" ng-href="#/profile">Profile</a></li>
             </ul>
-	    <div data-toggle="popover" class='pop-down' data-placement="bottom" title="" data-content="
-        	<div><a class='text-gray' href='#logout'>logout</a></div>
-        	<div><a class='text-gray' href='#profile'>My Profile</a></div>
-      		">Login
-	   </div>
+
+    	    <div style="position:relative;">
+          <img src='https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpf1/v/t1.0-1/p50x50/1507900_10151842209257595_366437610_n.jpg?oh=4a34ccbd3b0ef7fd65c068d2f54a05b8&oe=56C5839E&__gda__=1455539288_5b6f604f64bee664f0170321ea989291' style="width:30px;height:30px;" class="img-circle" data-toggle="popover" class='pop-down' data-placement="bottom" title="" data-content="
+            	<div><a class='text-gray' href='#logout' style='font-size:14px;color: #bbbbbb;'>logout</a></div>
+            	<div><a class='text-gray' style='font-size:14px;color: #bbbbbb;' href='#profile'>My Profile</a></div>
+
+          		"/>
+          </div>
           <!--</div>-->
       </div>
     </div>
@@ -85,16 +88,12 @@
         <script src="scripts/services/twitter_service.js"></script>
 
         <script type="text/javascript">
-	$(document).ready(function(){
-	    $('[data-toggle="popover"]').popover({
-		placement : 'bottom',
-		html:true,
-		
-	    });
-	$('.pop-down').css("margin-left","20px").addClass('pop-down-text-gray');
-	});
-</script>
-
-
+      	$(document).ready(function(){
+      	    $('[data-toggle="popover"]').popover({
+          		placement : 'bottom',
+          		html:true,
+      	    });
+	       });
+    </script>
 </body>
 </html>
