--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link href="5/tooltip.css" rel="stylesheet" />
+
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -71,6 +73,7 @@
     <script src="bower_components/ngstorage/ngStorage.js"></script>
     <script src="bower_components/oauth-js/dist/oauth.min.js"></script>
     <script src="bower_components/ngGallery/src/js/ngGallery.js"></script>
+    <script src="5/tooltip.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
