--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
     <script src="bower_components/ngstorage/ngStorage.js"></script>
     <script src="bower_components/oauth-js/dist/oauth.min.js"></script>
     <script src="bower_components/ngGallery/src/js/ngGallery.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <script src="5/tooltip.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
