navbar notification icon added

--- a/app/index.html
+++ b/app/index.html
@@ -36,11 +36,13 @@
 
           <!--<div class="collapse navbar-collapse" id="js-navbar-collapse">-->
             <ul class="nav navbar-nav main-nav" >
-              <li><a class="text-black" href="#/">Tech</a></li>
-              <li><a class="text-black" ng-href="#/submit">Submit</a></li>
-              <li><a class="text-black" ng-href="#/profile">Profile</a></li>
+              <li><a class="text-black" href="#/">TECH</a></li>
+              <li><a class="text-black" ng-href="#/profile">PROFILE</a></li>
             </ul>
-
+            <div class="header-right">
+              <a class="text-black" ng-href="#/submit"><i class="fa fa-plus text-gray"></i></a>
+              <i class="fa fa-bell text-gray"></i>
+            </div>
 
       </div>
     </div>
