post details changes

--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,8 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href="5/tooltip.css" rel="stylesheet" />
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="bower_components/angular-socialshare/angular-socialshare.css"/>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -68,12 +67,14 @@
     <script src="bower_components/oauth-js/dist/oauth.min.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/ment.io/dist/mentio.js"></script>
+    <!--<script src="bower_components/socket.io-client/socket.io.js"></script>
+    <script src="bower_components/angular-socket-io/socket.js"></script>-->
     <script src="bower_components/ngGallery/src/js/ngGallery.js"></script>
+    <script src="bower_components/angulike/angulike.js"></script>
+    <script src="bower_components/angular-socialshare/angular-socialshare.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="5/tooltip.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/register.js"></script>
@@ -83,7 +84,7 @@
         <script src="scripts/controllers/profiledetails.js"></script>
         <script src="scripts/services/api_service.js"></script>
         <script src="scripts/services/twitter_service.js"></script>
-
+        <script src="scripts/services/socket_service.js"></script>
 
 </body>
 </html>
